test/typeerrors/Strategies/UnSoundJudgement.type
      x :: a ; y :: b ;
  -------------------------
        x +++ y :: Bool;;
     
a == Int : "linkerkant moet een Int zijn"
b == Int : "rechterkant moet een Int zijn";
